# python-anonymity

./: .gitlab-ci.yml  .readthedocs.yml  LICENSE  README.md  data_fly.py  data_intervals.csv  data_utility_metrics.py  docs-requirements.txt  efficiency_metrics.py  incognito.py  l_diversity.py  main.py  mypy.ini   pyproject.toml  requirements.txt  setup.py  tox.ini  utils.py
anonymity/: __init__.py  _k_anonymity.py  _l_diversity.py  _t_closeness.py  data_fly.py  incognito.py  l_diversity.py  t_closeness.py  utils.py  utils_k_anonymity.py
anonymity/metrics/: __init__.py  data_utility_metrics.py  efficiency_metrics.py
anonymity/tools/: _k_anonymity.py  _l_diversity.py  _t_closeness.py
anonymity/tools/utils_k_anon/: __init__.py  utils_k_anonymity.py
docs/source/: anonymity.metrics.rst  anonymity.rst  anonymity.tools.rst  conf.py  index.rst
python_anonymity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: functionality_tests.py  main.py  unit_test.py
tests/data/: unit_test.py
