[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_anonymity"
version = "0.0.1"
authors = [
    { name="esmeralda.madrazo", email="esme21100@gmail.com" },
]
description = "Anonymity library for python"
readme = "README.md"
license = { file="Apache License" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/IFCA/python-anonymity/tree/main"
"Read the docs" = "https://python-anonymity.readthedocs.io/en/latest/"
